--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clientio/rappid": "file:./rappid.tgz",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@radix-ui/react-navigation-menu": "^1.1.2",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "d3": "^7.8.4",
     "graphlib": "^2.1.8",
     "jointjs": "^3.6.5",
+    "lucide-react": "^0.216.0",
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
@@ -29,6 +33,8 @@
     "react-zoom-pan-pinch": "^3.0.6",
     "rxjs": "^7.8.0",
     "superjson": "1.12.2",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
@@ -36,6 +42,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/backbone": "^1.4.15 ",
+    "@types/d3": "^7.4.0",
     "@types/dagre": "^0.7.48",
     "@types/eslint": "^8.21.3",
     "@types/graphlib": "^2.1.8",
@@ -44,6 +51,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
