--- a/package.json
+++ b/package.json
@@ -10,59 +10,63 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "^2.0.17",
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.11.0",
-    "@radix-ui/react-navigation-menu": "^1.1.2",
-    "@tanstack/react-query": "^4.28.0",
-    "@trpc/client": "^10.18.0",
-    "@trpc/next": "^10.18.0",
-    "@trpc/react-query": "^10.18.0",
-    "@trpc/server": "^10.18.0",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
-    "d3": "^7.8.4",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.1.1",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@tanstack/react-query": "^4.33.0",
+    "@trpc/client": "^10.37.1",
+    "@trpc/next": "^10.37.1",
+    "@trpc/react-query": "^10.37.1",
+    "@trpc/server": "^10.37.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "d3": "^7.8.5",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "graphlib": "^2.1.8",
-    "jointjs": "^3.6.5",
-    "lucide-react": "^0.216.0",
-    "next": "^13.2.4",
-    "next-auth": "^4.20.1",
+    "jointjs": "^3.7.5",
+    "lucide-react": "^0.268.0",
+    "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-zoom-pan-pinch": "^3.0.6",
-    "rxjs": "^7.8.0",
-    "superjson": "1.12.2",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5",
+    "react-zoom-pan-pinch": "^3.1.0",
+    "rxjs": "^7.8.1",
+    "superjson": "1.13.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "uuid": "^9.0.0",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/backbone": "^1.4.15 ",
     "@types/d3": "^7.4.0",
-    "@types/dagre": "^0.7.48",
-    "@types/eslint": "^8.21.3",
+    "@types/dagre": "^0.7.49",
+    "@types/eslint": "^8.44.2",
     "@types/graphlib": "^2.1.8",
     "@types/jquery": "^3.5.16",
-    "@types/node": "^18.15.5",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.2.4",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.11.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
+    "@types/node": "^20.5.1",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.19",
+    "postcss": "^8.4.28",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3",
+    "prisma": "^5.1.1",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "ct3aMetadata": {
     "initVersion": "7.10.1"
